Add Product Sans fonts

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
     <script src="main.js"></script>
 </head>
 <body>
-    
+    <p>Example text fañlsdkfasñldfhasdkfljhalkfjah</p>
+    <b>more text</b>
+    <i>more text</i>
+    <i><b>more text</b></i>
+    <p class="bi">even more text</p>
 </body>
 </html>
