Add voice search image and dropdown block

--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
         <form>
             <div class="barra">
                 <input type="text"/><br/>
+                <div class="bpv">
+                    <img src="images/micro.jpg" id="micro"/>
+                <p id="voz">Búsqueda por voz</p>
+                </div>
             </div>
             <div class="botones">
                 <input type="submit" value="Buscar con Google" class="search-buttons"/>
